src/objects/ERPIntegrationSummaryResult__c.object
<CustomObject>
    <fields>
        <fullName>DataFlowName__c</fullName>
        <label>Data Flow Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionID__c</fullName>
        <label>Execution ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfFailedRecords__c</fullName>
        <label>Number Of Failed Records</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfUploadedRecords__c</fullName>
        <label>Number Of Uploaded Records</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ERP Integration Summary Result</label>
    <nameField>
        <label>ERP Integration Summary Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Integration Summary Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>